# BeerGame

./: CMakeLists.txt  README.md  references.txt
docs/: CMakeLists.txt  Doxyfile.in
include/: Exceptions.h  Game.h  Instructor.h  Order.h  Player.h  PlayerEvent.h  Shipment.h  UniqueID.h  instrgeneratepassword.h  instrwindow.h  playerwindow.h  welcome.h
socket/: CMakeLists.txt  client.h  run-client.cpp  run-server.cpp  server.cpp  server.h
src/: CMakeLists.txt  Exceptions.cpp  Game.cpp  Instructor.cpp  Order.cpp  Player.cpp  PlayerEvent.cpp  Shipment.cpp  UniqueID.cpp  instrgeneratepassword.cpp  instrgeneratepassword.ui  instrwindow.cpp  instrwindow.ui  main.cpp  playerwindow.cpp  playerwindow.ui.autosave  welcome.cpp  welcome.ui
tests/: CMakeLists.txt  OrderTests.cpp  PlayerEventTests.cpp  ShipmentTests.cpp  UniqueIDTests.cpp  cExceptionsTests.cpp  gameTests.cpp  instructorTests.cpp  playerTests.cpp
